[gd_scene load_steps=7 format=3 uid="uid://n6csjkhxjfm2"]

[ext_resource type="Script" uid="uid://eeoyi4fsdafv" path="res://main.gd" id="1_ob6y6"]

[sub_resource type="AudioStreamCsound" id="AudioStreamCsound_a6stl"]

[sub_resource type="AudioStreamCsoundChannel" id="AudioStreamCsoundChannel_kfyye"]

[sub_resource type="AudioStreamCsoundNamedChannel" id="AudioStreamCsoundNamedChannel_4tb6j"]
channel_left = "instr_1_left"
channel_right = "instr_1_right"

[sub_resource type="AudioStreamCsoundNamedChannel" id="AudioStreamCsoundNamedChannel_ove8l"]
channel_left = "instr_4_left"
channel_right = "instr_4_right"

[sub_resource type="AudioStreamMyTone" id="AudioStreamMyTone_31rl7"]

[node name="main" type="Node2D"]
script = ExtResource("1_ob6y6")

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 229.0
offset_top = 112.0
offset_right = 305.0
offset_bottom = 152.0

[node name="CheckButton2" type="CheckButton" parent="."]
offset_left = 228.0
offset_top = 158.0
offset_right = 304.0
offset_bottom = 198.0

[node name="CheckButton3" type="CheckButton" parent="."]
offset_left = 230.0
offset_top = 204.0
offset_right = 306.0
offset_bottom = 244.0

[node name="Label" type="Label" parent="."]
offset_left = 194.0
offset_top = 126.0
offset_right = 234.0
offset_bottom = 140.0
text = "C4"

[node name="Label2" type="Label" parent="."]
offset_left = 196.0
offset_top = 172.0
offset_right = 236.0
offset_bottom = 186.0
text = "E4"

[node name="Label3" type="Label" parent="."]
offset_left = 195.0
offset_top = 217.0
offset_right = 235.0
offset_bottom = 231.0
text = "G4"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 600.0
offset_top = 159.0
offset_right = 737.0
offset_bottom = 209.0
text = "PLAY MIDI"

[node name="Label4" type="Label" parent="."]
offset_left = 358.0
offset_top = 120.0
offset_right = 398.0
offset_bottom = 143.0
text = "volume"

[node name="VSliderVolume" type="VSlider" parent="."]
offset_left = 422.0
offset_top = 115.0
offset_right = 457.0
offset_bottom = 241.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label5" type="Label" parent="."]
offset_left = 508.0
offset_top = 120.0
offset_right = 566.0
offset_bottom = 143.0
text = "tempo"

[node name="VSliderTempo" type="VSlider" parent="."]
offset_left = 567.0
offset_top = 115.0
offset_right = 602.0
offset_bottom = 241.0
min_value = 60.0
max_value = 480.0
value = 60.0

[node name="CsoundPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamCsound_a6stl")
autoplay = true

[node name="CsoundChannelPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamCsoundChannel_kfyye")
volume_db = -80.0
autoplay = true

[node name="CsoundNamedChannelPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamCsoundNamedChannel_4tb6j")
volume_db = -80.0
autoplay = true

[node name="CsoundNamedChannelPlayer2" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamCsoundNamedChannel_ove8l")
autoplay = true

[node name="MyTonePlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMyTone_31rl7")
volume_db = -80.0
autoplay = true
bus = &"MyToneNamedChannel"

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="CheckButton2" to="." method="_on_check_button_2_toggled"]
[connection signal="toggled" from="CheckButton3" to="." method="_on_check_button_3_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="VSliderVolume" to="." method="_on_v_slider_volume_value_changed"]
[connection signal="value_changed" from="VSliderTempo" to="." method="_on_v_slider_tempo_value_changed"]
